--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ body {
     --blue-light: #DEEBFF;
     --grey: #F2F2F2;
     --black: #000000;
-    -white: #FFFFFF;
+    --white: #FFFFFF;
 
     color: var(--black);
     /******************/
@@ -67,24 +67,76 @@ header nav ul li.active a{
    color: var(--blue);
 }
 
+/*****Formulaire*****/
+section.search {
+    max-width: 1440px;
+    margin: 0 auto;
+    padding: 16px;
+}
 
- /*****MediaQueries*****/
- @media screen and (max-width:768px) {
-     header {
-         flex-direction: column;
-         padding: 16px 0;
-     }
+h1 {
+    font-size: 24px;
+}
 
-     header nav {
-         width: 100%;
-     }
+.search p {
+    margin-bottom: 32px;
+}
 
-     header nav li {
-         text-align: center;
-         flex-basis: 50%;
-     }
+.search button i {
+    display: none;
+}
 
-     header nav ul li::before {
+.search-container {
+    display: flex;
+    align-items: center;
+    max-width: max-content;
+    height: 44px;
+    border: 1px solid var(--grey);
+    border-radius: 15px;
+}
+
+.search-container .fa-map-marker-alt {
+    padding: 0 16px;
+    height: 44px;
+    line-height: 44px;
+    background: var(--grey);
+    border-radius: 15px 0 0 15px;
+}
+
+.search-container input {
+    height: 42px;
+    font-weight: bold;
+    padding-left: 12px;
+    border: none;
+}
+
+.search-container button {
+    background-color: var(--blue);
+    border-radius: 0 15px 15px 0;
+    border: none;
+    height: 44px;
+    padding: 0 20px 0 16px;
+    color: var(--white);
+    font-weight: bold;
+}
+
+/*****MediaQueries*****/
+@media screen and (max-width:768px) {
+    header {
+        flex-direction: column;
+        padding: 16px 0;
+    }
+
+    header nav {
+        width: 100%;
+    }
+
+    header nav li {
+        text-align: center;
+        flex-basis: 50%;
+    }
+
+    header nav ul li::before {
         content: "";
         position: absolute;
         left: 0;
@@ -94,8 +146,31 @@ header nav ul li.active a{
         background-color: var(--grey);
     }
 
-     header nav ul li.active::before {
-         background-color: var(--blue);
-         top: 100%;
-     }
- }
+    header nav ul li.active::before {
+        background-color: var(--blue);
+        top: 100%;
+    }
+
+
+    .search-container {
+        max-width: 400px;
+        margin: 0 auto;
+    }
+
+    .search input {
+        flex-grow: 1;
+    }
+
+    .search button {
+        padding: 0;
+        border-radius: 15px;
+    }
+    .search button span {
+        display: none;
+    }
+
+    .search button i {
+        display: inline-block;
+        padding: 0 14px;
+    }
+}
