--- a/css/style.css
+++ b/css/style.css
@@ -1,176 +1,181 @@
 body {
-    /*Colors***********/
-    --blue: #0065FC;
-    --blue-light: #DEEBFF;
-    --grey: #F2F2F2;
-    --black: #000000;
-    --white: #FFFFFF;
+  /*Colors***********/
+  --blue: #0065fc;
+  --blue-light: #deebff;
+  --grey: #f2f2f2;
+  --black: #000000;
+  --white: #ffffff;
 
-    color: var(--black);
-    /******************/
+  color: var(--black);
+  /******************/
 
-    font-family: 'Raleway', sans-serif;
-    font-size: 16px;
+  font-family: "Raleway", sans-serif;
+  font-size: 16px;
 }
 
-a, 
+a,
 a:visited,
 a:active {
-    color: var(--black);
-    text-decoration: none;
+  color: var(--black);
+  text-decoration: none;
 }
 
 /*****HEADER*****/
 header {
-    width: 100%;
-    max-width: 1440px;
-    margin: 0 auto;
-    padding: 24px 16px 16px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  width: 100%;
+  max-width: 1440px;
+  margin: 0 auto;
+  padding: 24px 16px 16px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 header .logo {
-    width: 100px;
+  width: 100px;
 }
 
 header .logo img {
-    margin-left: 8px;
-    max-width: 100%;
+  margin-left: 8px;
+  max-width: 100%;
 }
 
 header nav ul {
-    display: flex;
-    list-style: none;
-    margin: 0;
-    padding: 0;
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 header nav ul li {
-    padding: 16px;
-    position: relative;
-    line-height: 1; /* Fix 1px difference position ::before Chrome/Firefox */
+  padding: 16px;
+  position: relative;
+  line-height: 1; /* Fix 1px difference position ::before Chrome/Firefox */
 }
 
 header nav ul li.active::before {
-    content: "";
-    position: absolute;
-    top: -24px;
-    left: 0;
-    height: 4px;
-    width: 100%;
-    background-color: var(--blue);
+  content: "";
+  position: absolute;
+  top: -26px;
+  left: 0;
+  height: 4px;
+  width: 100%;
+  background-color: var(--blue);
 }
 
-header nav ul li.active a{
-   color: var(--blue);
+header nav ul li.active a {
+  color: var(--blue);
 }
 
 /*****Formulaire*****/
 section.search {
-    max-width: 1440px;
-    margin: 0 auto;
-    padding: 16px;
+  max-width: 1440px;
+  margin: 0 auto;
+  padding: 16px;
 }
 
 h1 {
-    font-size: 24px;
+  font-size: 24px;
 }
 
 .search p {
-    margin-bottom: 32px;
+  margin-bottom: 32px;
 }
 
-.search button i {
-    display: none;
+.search button i,
+.search button span:last-child {
+  display: none;
 }
 
 .search-container {
-    display: flex;
-    align-items: center;
-    max-width: max-content;
-    height: 44px;
-    border: 1px solid var(--grey);
-    border-radius: 15px;
+  display: flex;
+  align-items: center;
+  max-width: max-content;
+  height: 44px;
+  border: 1px solid var(--grey);
+  border-radius: 15px;
 }
 
 .search-container .fa-map-marker-alt {
-    padding: 0 16px;
-    height: 44px;
-    line-height: 44px;
-    background: var(--grey);
-    border-radius: 15px 0 0 15px;
+  padding: 0 16px;
+  height: 44px;
+  line-height: 44px;
+  background: var(--grey);
+  border-radius: 15px 0 0 15px;
 }
 
 .search-container input {
-    height: 42px;
-    font-weight: bold;
-    padding-left: 12px;
-    border: none;
+  height: 42px;
+  font-weight: bold;
+  padding-left: 12px;
+  border: none;
 }
 
 .search-container button {
-    background-color: var(--blue);
-    border-radius: 0 15px 15px 0;
-    border: none;
-    height: 44px;
-    padding: 0 20px 0 16px;
-    color: var(--white);
-    font-weight: bold;
+  background-color: var(--blue);
+  border-radius: 0 15px 15px 0;
+  border: none;
+  height: 44px;
+  padding: 0 20px 0 16px;
+  color: var(--white);
+  font-weight: bold;
 }
 
 /*****MediaQueries*****/
-@media screen and (max-width:768px) {
-    header {
-        flex-direction: column;
-        padding: 16px 0;
-    }
+@media screen and (max-width: 768px) {
+  header {
+    flex-direction: column;
+    padding: 16px 0;
+  }
 
-    header nav {
-        width: 100%;
-    }
+  header nav {
+    width: 100%;
+  }
 
-    header nav li {
-        text-align: center;
-        flex-basis: 50%;
-    }
+  header nav li {
+    text-align: center;
+    flex-basis: 50%;
+  }
 
-    header nav ul li::before {
-        content: "";
-        position: absolute;
-        left: 0;
-        height: 4px;
-        width: 100%;
-        top: 100%;
-        background-color: var(--grey);
-    }
+  header nav ul li::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    height: 4px;
+    width: 100%;
+    top: 100%;
+    background-color: var(--grey);
+  }
 
-    header nav ul li.active::before {
-        background-color: var(--blue);
-        top: 100%;
-    }
+  header nav ul li.active::before {
+    background-color: var(--blue);
+    top: 100%;
+  }
 
+  .search-container {
+    max-width: 400px;
+    margin: 0 auto;
+  }
 
-    .search-container {
-        max-width: 400px;
-        margin: 0 auto;
-    }
+  .search input {
+    flex-grow: 1;
+    width: 100%;
+  }
 
-    .search input {
-        flex-grow: 1;
-    }
+  .search button {
+    padding: 0;
+    border-radius: 15px;
+  }
+  .search button span:first-child {
+    display: none;
+  }
 
-    .search button {
-        padding: 0;
-        border-radius: 15px;
-    }
-    .search button span {
-        display: none;
-    }
+  .search button span:last-child {
+    display: inline;
+  }
 
-    .search button i {
-        display: inline-block;
-        padding: 0 14px;
-    }
+  .search button i {
+    display: inline-block;
+    padding: 0 14px;
+  }
 }
