--- a/css/style.css
+++ b/css/style.css
@@ -205,6 +205,49 @@ fieldset label span span {
   margin-right: 8px;
 }
 
+/*****Hébergements ville *****/
+#lodgings article {
+  background: var(--white);
+  width: 300px;
+  box-shadow: 0 0 10px 5px var(--grey);
+  border-radius: 30px;
+  padding: 0 0 12px;
+  position: relative;
+}
+
+#lodgings article img{
+  width: 100%;
+  height: 150px;
+  border-radius: 30px 30px 0 0;
+  border: 8px solid var(--white);
+  object-fit: cover;
+}
+#lodgings article h3{
+  padding: 0 16px;
+  margin: 0;
+}
+#lodgings a::before {
+  position: absolute;
+  content: "";
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+#lodgings p {
+  padding: 0 16px;
+  margin: 8px 0;
+}
+#lodgings .rating {
+  padding: 0 16px;
+}
+#lodgings .rating .fas{
+  color: var(--grey);
+}
+#lodgings .rating .fas.checked{
+  color: var(--blue);
+}
+
 /*****MediaQueries*****/
 @media screen and (max-width: 768px){
   header {
