--- a/css/style.css
+++ b/css/style.css
@@ -248,6 +248,53 @@ fieldset label span span {
   color: var(--blue);
 }
 
+/*****Popular*****/
+#popular article {
+  background: var(--white);
+  width: 400px;
+  box-shadow: 0 0 10px 5px var(--grey);
+  border-radius: 30px;
+  position: relative;
+  display:flex;
+}
+#popular article .details-container {
+  display:flex;
+  flex-direction: column;
+  padding: 8px;
+  width: 18ch;
+  align-items: flex-start;
+}
+#popular article img{
+  width: 180px;
+  height: 180px;
+  border-radius: 30px 0 0 30px;
+  border: 8px solid var(--white);
+  object-fit: cover;
+}
+#popular article h3{
+  margin: 8px 0 ;
+}
+#popular a::before {
+  position: absolute;
+  content: "";
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+#popular p {
+  margin: 0;
+}
+#popular .rating {
+  margin-top: auto;
+}
+#lodgings .rating .fas{
+  color: var(--grey);
+}
+#lodgings .rating .fas.checked{
+  color: var(--blue);
+}
+
 /*****MediaQueries*****/
 @media screen and (max-width: 768px){
   header {
