--- a/css/style.css
+++ b/css/style.css
@@ -205,95 +205,87 @@ fieldset label span span {
   margin-right: 8px;
 }
 
+/*****Cards*****/
+article .rating {
+  padding: 0 16px;
+}
+article .rating .fas{
+  color: var(--grey);
+  font-size: 14px;
+}
+article .rating .fas.checked{
+  color: var(--blue);
+}
+article a::before {
+  position: absolute;
+  content: "";
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
 /*****Hébergements ville *****/
-#lodgings article {
+.lodgings-section article {
   background: var(--white);
-  width: 300px;
+  max-width: 300px;
   box-shadow: 0 0 10px 5px var(--grey);
   border-radius: 30px;
   padding: 0 0 12px;
   position: relative;
 }
 
-#lodgings article img{
+.lodgings-section article img{
   width: 100%;
   height: 150px;
   border-radius: 30px 30px 0 0;
   border: 8px solid var(--white);
   object-fit: cover;
 }
-#lodgings article h3{
+.lodgings-section article h3{
   padding: 0 16px;
   margin: 0;
 }
-#lodgings a::before {
-  position: absolute;
-  content: "";
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-}
-#lodgings p {
+
+.lodgings-section p {
   padding: 0 16px;
   margin: 8px 0;
 }
-#lodgings .rating {
-  padding: 0 16px;
-}
-#lodgings .rating .fas{
-  color: var(--grey);
-}
-#lodgings .rating .fas.checked{
-  color: var(--blue);
-}
 
 /*****Popular*****/
-#popular article {
+.popular-section article {
   background: var(--white);
-  width: 400px;
+  max-width: 400px;
   box-shadow: 0 0 10px 5px var(--grey);
   border-radius: 30px;
   position: relative;
   display:flex;
 }
-#popular article .details-container {
+.popular-section article .details-container {
   display:flex;
   flex-direction: column;
   padding: 8px;
   width: 18ch;
-  align-items: flex-start;
 }
-#popular article img{
+.popular-section article img {
   width: 180px;
   height: 180px;
   border-radius: 30px 0 0 30px;
   border: 8px solid var(--white);
   object-fit: cover;
 }
-#popular article h3{
+.popular-section article h3 {
   margin: 8px 0 ;
 }
-#popular a::before {
-  position: absolute;
-  content: "";
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-}
-#popular p {
+
+.popular-section p {
   margin: 0;
 }
-#popular .rating {
+
+.popular-section .rating {
+  padding-left: 0;
   margin-top: auto;
 }
-#lodgings .rating .fas{
-  color: var(--grey);
-}
-#lodgings .rating .fas.checked{
-  color: var(--blue);
-}
+
 
 /*****MediaQueries*****/
 @media screen and (max-width: 768px){
@@ -355,5 +347,20 @@ fieldset label span span {
 
   fieldset label {
     margin-right: 8px;
+  }
+
+  .results-container section article {
+    margin: 8px;
+    max-width: 100%;
+  }
+  
+  .lodgings-section article img {
+    height: 120px;
+  }
+
+  .popular-section article img {
+    width: 140px;
+    max-width: 35%;
+    height: 140px;
   }
 }
