--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@ body {
   --blue: #0065fc;
   --blue-light: #deebff;
   --grey: #f2f2f2;
+  --shadow: #D3D3D3;
   --black: #000000;
   --white: #ffffff;
 
@@ -211,6 +212,64 @@ h1 {
   margin-right: 8px;
 }
 
+/*****Cards sections*****/
+.results-container {
+  display: flex;
+  padding: 16px;
+  width: 100%;
+  justify-content: space-between;
+  gap: 32px;
+}
+.cards-section {
+  background-color: var(--grey);
+  border-radius: 25px;
+  padding: 16px 24px;
+}
+.lodgings-section {
+  flex-basis: calc( 100% * 2/ 3 - 24px);
+}
+.popular-section {
+  flex-basis: calc( 100% / 3 - 24px);
+}
+.cards-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  gap: 16px;
+}
+.cards-container article img {
+  width: 100%;
+  height: 100%;
+  max-height: 150px;
+  border: 8px solid var(--white);
+  object-fit: cover;
+}
+.more {
+  border: none;
+  margin: 32px 0 16px;
+  font-weight: bold;
+  position: relative;
+  color: var(--black);
+}
+.more::before {
+  content:"";
+  position: absolute;
+  top: 100%;
+  left: 0;
+  right: 0;
+  height: 2px;
+  transform: scaleX(0);
+  transition: transform .3s ease-in-out, color .3s ease-in-out;
+  background-color: var(--blue);
+}
+.more:hover {
+  cursor: pointer;
+  color: var(--blue);
+}
+.more:hover::before {
+  transform: scaleX(1);
+}
+
 /*****Cards*****/
 article .rating {
   padding: 0 16px;
@@ -233,19 +292,17 @@ article a::before {
 /*****Hébergements ville *****/
 .lodgings-section article {
   background: var(--white);
-  max-width: 300px;
-  box-shadow: 0 0 10px 5px var(--grey);
+  flex-basis: calc( 100% / 3 - 16px);
+  min-width: 175px;
+  height: max-content;
+  box-shadow: 0 5px 10px 5px var(--shadow);
   border-radius: 30px;
   padding: 0 0 12px;
   position: relative;
 }
 
 .lodgings-section article img{
-  width: 100%;
-  height: 150px;
   border-radius: 30px 30px 0 0;
-  border: 8px solid var(--white);
-  object-fit: cover;
 }
 .lodgings-section article h3{
   padding: 0 16px;
@@ -260,8 +317,9 @@ article a::before {
 /*****Popular*****/
 .popular-section article {
   background: var(--white);
-  max-width: 400px;
-  box-shadow: 0 0 10px 5px var(--grey);
+  width: 100%;
+  min-height: 150px;
+  box-shadow: 0 0 10px 5px var(--shadow);
   border-radius: 30px;
   position: relative;
   display:flex;
@@ -269,18 +327,19 @@ article a::before {
 .popular-section article .details-container {
   display:flex;
   flex-direction: column;
-  padding: 8px;
-  width: 18ch;
+  padding: 8px 8px 16px;
+  flex-basis: calc(100% * 2 / 3);
 }
+.popular-section article .img {
+  flex-basis: calc(100% / 3);
+}
+
 .popular-section article img {
-  width: 180px;
-  height: 180px;
   border-radius: 30px 0 0 30px;
-  border: 8px solid var(--white);
-  object-fit: cover;
 }
 .popular-section article h3 {
   margin: 8px 0 ;
+  max-width: 18ch;
 }
 
 .popular-section p {
@@ -294,6 +353,32 @@ article a::before {
 
 
 /*****MediaQueries*****/
+@media screen and (max-width: 992px){
+  .results-container {
+    flex-direction: column;
+    padding: 0;
+  }
+  .cards-section {
+    padding: 16px;
+    border-radius: 0;
+  }
+  .popular-section {
+    order: 1;
+
+  }
+  .lodgings-section {
+    order: 2;
+    background-color: var(--white);
+  }
+  .popular-section .cards-container {
+    justify-content: flex-start;
+  }
+  .popular-section article {
+    max-width: 768px;
+  }
+}
+
+
 @media screen and (max-width: 768px){
   header {
     flex-direction: column;
@@ -356,18 +441,13 @@ article a::before {
     margin-right: 8px;
   }
 
-  .results-container section article {
-    margin: 8px;
-    max-width: 100%;
-  }
-  
-  .lodgings-section article img {
-    height: 120px;
+  .cards-container {
+    justify-content: flex-start;
+    flex-direction: column;
   }
 
-  .popular-section article img {
-    width: 140px;
-    max-width: 35%;
-    height: 140px;
+  .cards-container article img {
+    border-width: 5px;
   }
+  
 }
