--- a/css/style.css
+++ b/css/style.css
@@ -240,8 +240,7 @@ h1 {
 }
 .cards-container article img {
   width: 100%;
-  height: 100%;
-  max-height: 150px;
+  height: 140px;
   border: 8px solid var(--white);
   object-fit: cover;
 }
@@ -310,8 +309,9 @@ article a::before {
 .lodgings-section article {
   flex-basis: calc( 100% / 3 - 16px);
   min-width: 175px;
-  height: max-content;
   padding: 0 0 12px;
+  display: flex;
+  flex-direction: column;
 }
 
 .lodgings-section article img{
@@ -319,12 +319,12 @@ article a::before {
 }
 .lodgings-section article h3{
   padding: 0 16px;
-  margin: 0;
+  margin: 0 0 8px;
 }
 
 .lodgings-section p {
   padding: 0 16px;
-  margin: 8px 0;
+  margin: auto 0 8px;
 }
 
 /*****Popular*****/
