--- a/css/style.css
+++ b/css/style.css
@@ -345,6 +345,8 @@ article a::before {
 
 .popular-section article img {
   border-radius: 30px 0 0 30px;
+  height: 100%;
+  max-height: 150px;
 }
 .popular-section article h3 {
   margin: 8px 0 ;
