--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ a:active {
 header {
   width: 100%;
   margin: 0 auto;
-  padding: 24px 16px 16px;
+  padding: 34px 40px 16px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -54,10 +54,13 @@ header nav ul li {
   line-height: 1; /* Fix 1px difference position ::before Chrome/Firefox */
 }
 
+header ul li.active a {
+  color: var(--blue);
+}
 header nav ul li::before {
   content: "";
   position: absolute;
-  top: -26px;
+  top: -36px;
   left: 0;
   height: 4px;
   width: 100%;
@@ -70,13 +73,11 @@ header nav ul li::before {
   header nav ul li:hover::before {
     transform: scaleX(1);
   }
-  
-  header nav ul li:hover a {
-    color: var(--blue);
-  }
 }
 
-
+main {
+  padding: 0 24px;
+}
 /*****Formulaire*****/
 section.search {
   margin: 0 auto;
@@ -156,10 +157,10 @@ h1 {
   border-radius: 50%;
   background: var(--blue-light);
   color: var(--blue);
-  height: 52px;
-  width: 52px;
+  height: 50px;
+  width: 50px;
   text-align: center;
-  line-height: 52px;
+  line-height: 50px;
   transform: translateX(-3px);
 }
 
@@ -171,7 +172,7 @@ h1 {
   justify-content: flex-start;
   margin: 8px 16px 8px 0;
   border-radius: 50px;
-  border: 2px solid var(--grey);
+  border: 3px solid var(--grey);
   text-transform: capitalize;
   font-weight: bold;
   background: var(--white);
@@ -227,15 +228,14 @@ h1 {
   padding: 16px 24px;
 }
 .lodgings-section {
-  flex-basis: calc( 100% * 2/ 3 - 24px);
+  flex-basis: calc( 100% * 2/ 3);
 }
 .popular-section {
-  flex-basis: calc( 100% / 3 - 24px);
+  flex-basis: calc( 100% / 3);
 }
 .cards-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-evenly;
   gap: 16px;
 }
 .cards-container article img {
@@ -307,8 +307,8 @@ article a::before {
 }
 /*****Hébergements ville *****/
 .lodgings-section article {
-  flex-basis: calc( 100% / 3 - 16px);
-  min-width: 175px;
+  flex-basis: calc( (100% / 3) - (32px / 3) );
+  min-width: 165px;
   padding: 0 0 12px;
   display: flex;
   flex-direction: column;
@@ -328,6 +328,12 @@ article a::before {
 }
 
 /*****Popular*****/
+.popular-section h2 {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 8px;
+}
 .popular-section article {
   width: 100%;
   min-height: 150px;
@@ -386,6 +392,9 @@ article a::before {
 
 /*****MediaQueries*****/
 @media screen and (max-width: 992px){
+  main {
+    padding: 0 0;
+  }
   .results-container {
     flex-direction: column;
     padding: 0;
