--- a/css/style.css
+++ b/css/style.css
@@ -239,7 +239,7 @@ h1 {
   gap: 16px;
 }
 .cards-container article img {
-  width: 100%;
+  max-width: 100%;
   height: 140px;
   border: 8px solid var(--white);
   object-fit: cover;
@@ -369,24 +369,38 @@ article a::before {
 }
 
 /*****Activities****/
+.activities {
+  padding:0 24px;
+}
 .activities .cards-container {
+  gap: 32px;
   flex-flow: column wrap;
+  height: 500px;
+  justify-content: space-between;
+  padding: 0;
 }
 .activities article {
+  width: calc(100% / 4 - (3 * 40px) / 4);
+  display: flex;
   flex-direction: column;
-  width: 300px;
 }
-.activities .cards-container article img{
-  max-height: unset;
-  height:150px;
+.activities  article img{
   border-radius: 30px 30px 0 0;
+  border: none;
+  height: 100%;
 }
-.activities .cards-container article:nth-child(3n +1) img{
-  height: 400px;
-}
-
 .activities h3 {
  padding: 0 16px;
+ font-size: 16px;
+}
+.activities .full  img {
+  height: 450px;
+}
+.activities .quarter img  {
+ height: 120px;
+}
+.activities .half img {
+  height: 220px
 }
 
 
