--- a/css/style.css
+++ b/css/style.css
@@ -346,13 +346,18 @@ article a::before {
   flex-basis: calc(100% * 2 / 3);
 }
 .popular-section article .img {
-  flex-basis: calc(100% / 3);
+ /* flex-basis: calc(100% / 3);*/
+  flex: 1;
+  overflow: hidden;
+  height: 170px;
 }
 
 .popular-section article img {
   border-radius: 30px 0 0 30px;
+  /*height: 100%;
+  max-height: 150px;*/
   height: 100%;
-  max-height: 150px;
+  width: 100%;
 }
 .popular-section article h3 {
   margin: 8px 0 ;
@@ -560,8 +565,18 @@ footer {
     border-width: 5px;
   }
 
+  .lodgings-section article {
+    max-width: 350px;
+    margin: auto;
+  }
+
   .activities {
     padding: 0 16px;
+  }
+
+  .activities article {
+    max-width: 500px;
+    margin: auto;
   }
   
   footer {
