--- a/css/style.css
+++ b/css/style.css
@@ -375,8 +375,7 @@ article a::before {
 
 /*****Activities****/
 .activities {
-  margin: 48px auto;
-  padding:0 24px;
+  padding: 48px 24px;
 }
 .activities .cards-container {
   gap: 32px;
